add_subdirectory( config   )
add_subdirectory( container )
add_subdirectory( filesystem )
add_subdirectory( geometry )
add_subdirectory( large_file )
add_subdirectory( log )
add_subdirectory( maths )
add_subdirectory( memory )
add_subdirectory( memory_map )
add_subdirectory( parser )
add_subdirectory( runtime )
add_subdirectory( serialisation )
add_subdirectory( singleton )
add_subdirectory( thread )
add_subdirectory( types )
add_subdirectory( utils )
add_subdirectory( value )
add_subdirectory( xpr )
add_subdirectory( mpi )

