[package]
name = "eckit"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Safe Rust wrapper for ECMWF's eckit C++ library"
links = "eckit_rs"
build = "build.rs"

[features]
default = ["vendored"]
vendored = ["eckit-sys/vendored"]
system = ["eckit-sys/system"]

[dependencies]
eckit-sys.workspace = true

[build-dependencies]
bindman-utils.workspace = true
