# (C) Copyright 1996-2015 ECMWF.
#
# This software is licensed under the terms of the Apache Licence Version 2.0
# which can be obtained at http://www.apache.org/licenses/LICENSE-2.0.
# In applying this licence, ECMWF does not waive the privileges and immunities
# granted to it by virtue of its status as an intergovernmental organisation
# nor does it submit to any jurisdiction.

add_subdirectory( geometry )
add_subdirectory( grib )
add_subdirectory( maths )
add_subdirectory( mpi )
add_subdirectory( ecml )
add_subdirectory( la )
add_subdirectory( testing )
